remove letter-spacing normal, fix path to svg

--- a/src/css/layout/footer.css
+++ b/src/css/layout/footer.css
@@ -17,7 +17,6 @@
   font-size: 20px;
   line-height: 1.4;
   font-weight: 700;
-  letter-spacing: normal;
   margin-bottom: 20px;
 }
 
@@ -45,7 +44,6 @@
 .contact-list-link {
   display: block;
   font-weight: 600;
-  letter-spacing: normal;
 }
 
 .contact-list-link:hover::after,
@@ -69,7 +67,6 @@
   font-weight: 600;
   font-size: 14px;
   line-height: 1.3;
-  letter-spacing: normal;
 }
 
 .footer-nav-list-link {
